Bug fixed relating to bug issue #29931

--- a/guide/running.html
+++ b/guide/running.html
@@ -313,7 +313,16 @@ section of the test metadata list features or properties that must be present fo
     any characters outside these ranges, and will not require characters in one of these ranges to be compared with characters in another.
     For example, a sensible default would sort "abc" before "def"; a fallback collation that sorted "def" before "abc", while legal
     according to the language specification, would not satisfy this dependency.</td>
-  </tr>   
+  </tr>
+<tr>
+  <td>advanced-uca-fallback</td>
+  <td>30</td>
+  <td>Indicates that the test uses a UCA collation URI with the option fallback=yes (or fallback omitted),
+    and the test results assume that the implementation has a reasonably high level of support for uca collation semantics
+    even if it is not 100% conformant.
+    Unlike simple-uca-fallback these tests assume support for a wider range of uca collation features: including different collation
+    strengths, different case ordering options and other options, such as numeric collations.</td>
+</tr>
 </tbody>
 </table>
   
