Add new feature remote_http (bug 30078)

--- a/guide/running.html
+++ b/guide/running.html
@@ -303,6 +303,11 @@ section of the test metadata list features or properties that must be present fo
   <td>Indicates that the test uses a collation URI other than those which the specification requires every processor to support</td>
 </tr> 
   <tr>
+    <td>remote_http</td>
+    <td>1</td>
+    <td>Indicates that the test uses uses a function such as doc() or unparsed-text() to fetch resources from the web using an HTTP/HTTPS URL.</td>
+  </tr> 
+  <tr>
     <td>simple-uca-fallback</td>
     <td>50</td>
     <td>Indicates that the test uses a UCA collation URI with the option fallback=yes (or fallback omitted), 
