Add a TODO to the test suite documentation

--- a/guide/submitting.html
+++ b/guide/submitting.html
@@ -13,11 +13,13 @@
 <body xml:lang="en" lang="en">
   <p><img alt="W3C" src="http://www.w3.org/Icons/WWW/w3c_home.gif" /></p>
 
-<h1 style="text-align: center;">Writing and Submitting tests for the QT3 Test
-Suite</h1>
+<h1 style="text-align: center;">Writing and Submitting tests for the QT3 Test Suite</h1>
+  
+  <p><b>This document needs to be updated to reflect the fact that the test suite is now in GitHub rather
+  than on the W3C CVS repository. - Michael Kay, 2020-01-08</b></p>
 
 <h2>Policy</h2>
- ß 
+  
   <p>We welcome submissions of test cases from individuals and organizations
   whether or not they already participating in a relevant Working Group. </p>
   
