--- a/guide/running.html
+++ b/guide/running.html
@@ -22,21 +22,13 @@ QT3 Test Suite on their XQuery or XPath implementation. It includes guidelines h
 cases can be customized in order to run on an implementation, and describes the
 process of evaluating the results.</p>
   
-<p>Guidelines for submitting results to the XML Query Working Group
-can be found in <a href="reporting.html">Reporting Results</a>.</p>
+
   
   <h2>Obtaining the tests</h2>
   
+  <p>The master version of the test suite is now in GitHub in repository <code>w3c/qt3tests</code>.</p>
   
-  <p>Our source files are available at <a
-    href="http://dev.w3.org/cvsweb/2011/QT3-test-suite/">http://dev.w3.org/cvsweb/2011/QT3-test-suite/</a>.
-    This page provides the ability to view individual files.</p>
-  
-  <p>If you want to get the latest version of the test suite, but don't intend to make any contributions,
-    you can use anonymous CVS to check the whole suite out into your local filestore. Use the
-    CVS repository name <code>:pserver:anonymous@dev.w3.org:/sources/public</code>, password <code>anonymous</code>,
-    and the module name <code>2011/QT3-test-suite</code>.</p>
-  
+
   
   <p>The QT3 test suite is made available under the terms of the W3C Licenses described at:
     <a href="http://www.w3.org/Consortium/Legal/2008/04-testsuite-copyright">http://www.w3.org/Consortium/Legal/2008/04-testsuite-copyright</a>
@@ -47,7 +39,7 @@ can be found in <a href="reporting.html">Reporting Results</a>.</p>
   
   <p><i>Contributors to the test suite can be assumed to have agreed to make their contributions available under these terms and
     conditions, and take responsibility for ensuring that they are entitled to make the material available. In the event that anyone 
-    encounters material which should not have been submitted and published, however, they should immediately let the Working Group know, 
+    encounters material which should not have been submitted and published, however, they should raise a GitHub issue, 
     so that it can be withdrawn.</i></p> 
   
   
@@ -61,12 +53,12 @@ can be found in <a href="reporting.html">Reporting Results</a>.</p>
   
 <h2>Scope of the Tests</h2>
 
-<p>The main purpose of the test suite is to enable XPath 3.0 and XQuery 3.0 implementations
+<p>The main purpose of the test suite is to enable XPath 3.1 and XQuery 3.1 implementations
 to be tested. However, the test suite also contains a great many tests that can
-be used to test XPath 2.0 and XQuery 1.0 implementations, and these are marked as such
+be used to test XPath 2.0/3.0 and XQuery 1.0/3.0 implementations, and these are marked as such
 in the test metadata.</p>
   
-<p>The primary objective of the Working Group in developing the tests is to gather the
+<p>The primary objective of the Working Group in developing the tests was to gather the
 information needed to progress the specifications through the W3C process: that is,
 to demonstrate that the specifications are implementable and that implementations
 are interoperable. However, many contributors of tests are implementors who are
@@ -98,44 +90,18 @@ Published results submitted
 by implementors were not necessarily obtained using the test drivers found in this
 directory. Further contributions to this directory are welcome.</p>  
 
-<p>Implementors are encouraged to submit results to W3C, in order to achieve the
-  purpose for which the tests were designed. For information on reporting results,
-  see <a href="reporting.html">Reporting results</a>.</p>
+<p>Implementors were encouraged to submit results to W3C, in order to achieve the
+  purpose for which the tests were designed. The process for reporting results is no
+  longer operative.</p>
   
   <h2>Reporting a Problem</h2>
   
   <p>If you believe that some of the queries or their expected results are
-    incorrect, then we encourage you to enter bug reports in the public instance of
-    Bugzilla at W3C, <a
-      href="http://www.w3.org/Bugs/Public/">http://www.w3.org/Bugs/Public/</a>. To
-    enter a bug report you will need a Bugzilla signon (email address and
-    password). You can create this singon by following the <a
-      href="http://www.w3.org/Bugs/Public/createaccount.cgi">Open a new Bugzilla
-      account</a> link on the Bugzilla Main Page.</p>
-  
-  <p>General information on Bugzilla, an open-source bug tracking system, is
-    available at <a href="http://www.bugzilla.org/">http://www.bugzilla.org/</a>.
-    The standard documentation for the version currently being run on the W3C
-    server is available at <a
-      href="http://www.bugzilla.org/docs/2.20/html/">http://www.bugzilla.org/docs/2.20/html/</a>.</p>
-  
-  <p>To enter a bug report in Bugzilla you will need to log in, choose the action
-    "New", and then choose the "XQuery / XPath / XSLT" product and the "XQuery/XPath Test Suite" component. Please be specific
-    about the problem that you are reporting. Clearly identify the test case or
-    test cases that are problematic. If you believe that the expected result is
-    wrong, then tell us what result you believe is correct. If you believe that
-    another result for a test case is justified, then please tell us what it is. In
-    both cases, please cite portions of one or more of the XQuery specifications
-    that support your position.</p>
-  
-  <p>All bug reports raised against the test suite are initially allocated to the test coordinator. The test coordinator will
-    then assign them to someone for resolution. Sometimes this will be the original author of the test, sometimes a person in the
-    Working Group who has recognized expertise in the relevant area. Experts other than the assignee are welcome to fix the bug
-    if they are confident that the fix will be uncontroversial.</p>
-  
-  <p>Where a bug report raises difficult questions of interpretation of the specification, the test coordinator will assign
-    the bug to the chair of the Working Group, who will ensure that the question is discussed by the Working Group as a whole.
-    In some cases the bug report will be "promoted" to a bug against the specification itself.</p>
+    incorrect, then we encourage you to raise a GitHub issue. Because the contributors
+    to the test suite are a community of volunteers with no formal organization, there
+    is no guarantee that any issue (or pull request) will be attended to. Equally,
+  there is no formal process for obtaining agreement as to whether or not a particular
+  test is "correct" according to the W3C language specifications.</p>
   
   
 <h2>Dependencies and Optional Features</h2>
@@ -155,16 +121,15 @@ the dependencies can be properly documented.</p>
 <p>One of the major dependencies that permeates all tests is which specification(s) the
 test is designed to exercise. This will be some combination of one or more of XQuery 1.0,
 XQuery 3.0, XPath 2.0, and XPath 3.0. These are documented using <code>&lt;spec type="lang" value="V"/&gt;</code>
-where V is typically a space-separated sequence of "XQ10", "XQ30+", "XQ10+", "XP20", "XP30+",
+  where V is typically a space-separated sequence of "XQ10", "XQ30+", "XQ31+", "XQ10+", "XP20", "XP30+", "XP31+"
 or "XP20+", where "XQ" means XQuery, "XP" means XPath, and the "+" should be read as "or later".
-(Tests labelled as applicable to 3.0 are assumed to be applicable to later releases, until
-proved otherwise.)</p>
+</p>
   
 <p>Although a product may support more than one of these languages/versions, a given run
 of the test suite should assume that the product under test only supports one language/version, and should only
-attempt to execute the tests applicable to that language/version. Each test result submission
+attempt to execute the tests applicable to that language/version. Each test result report
 is therefore concerned only with one of these specifications; products that implement more
-than one specification are encouraged to submit separate results for each one.</p>
+than one specification were encouraged to submit separate results for each one.</p>
 
 <p>The semantics of XPath in some cases depend on the host language. The test suite makes the
 following assumptions about the host language:</p>
@@ -191,7 +156,8 @@ of dependency are handled in the same way. Elements within the <code>&lt;depende
 section of the test metadata list features or properties that must be present for the test to work
 (or in a few cases, features/properties that must be absent for it to work).</p>
 
-<p>The current list of features and their intended meaning is as follows:</p>
+<p>The current list of features and their intended meaning is as follows (there may be additional
+  features not listed here):</p>
 
 <table>
 <thead>
@@ -346,11 +312,11 @@ that expects the schema processor to support XSD 1.0 and one that expects it to 
 The test driver might choose to run either or both, depending on the capabilities of the product
 under test.</p>
 
-<p>Because a key aim of the Working Group is to establish that the specification is implementable,
-test result submissions must identify which dependencies are satisfied by the product under test,
-and which are not. When a test is not run because a dependency is not satisfied, the result submission
-can either include an entry stating explicitly that the test was not run (perhaps with a reason),
-or it can simply make no mention of the test, since the analysis will assume "notRun" as the default
+<p>Because a key aim of the Working Group was to establish that the specification is implementable,
+test result submissions were required to identify which dependencies were satisfied by the product under test,
+and which were not. When a test was not run because a dependency is not satisfied, the result submission
+could either include an entry stating explicitly that the test was not run (perhaps with a reason),
+or it could simply make no mention of the test, since the analysis will assume "notRun" as the default
 for tests omitted from the report.</p>
   
   
@@ -566,6 +532,6 @@ and <a
 href="http://www.w3.org/Consortium/Legal/privacy-statement#Members">Member</a>
 privacy statements.</p>
 
-<p></p>
+<p>GitHub version updated 2020-01-17 by Michael Kay, Saxonica</p>
 </body>
 </html>
